# hue-control-center

./: .gitignore  Dockerfile.dev  README.md
.devcontainer/: devcontainer.json
api/: app.py  hue.py  requirements.txt
api/scripts/: color_cycle.py
app/: package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: main.rs
app/src/components/: ListCard.tsx  SettingButton.tsx  SettingList.tsx
config/: configuration.yaml
custom_components/hue_custom/: __init__.py  const.py  manifest.json
old/api/: hue.py
old/app/public/: index.html
old/app/src/: App.tsx  index.tsx
old/app/src-tauri/: Cargo.toml  tauri.conf.json
old/app/src-tauri/src/: main.rs
old/app/src/components/: SettingList.tsx  TimeInput.tsx
old/app/src/theme/: theme.ts
old/app/src/util/: fetchUtil.ts
scripts/: start_hass.sh
