[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"
[build-dependencies]
tauri-build = "1.0.0-beta.4"

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "system-tray"]
version = "1.0.0-beta.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
