[package]
authors = ["you"]
build = "src/build.rs"
default-run = "app"
description = "A Tauri App"
edition = "2018"
license = ""
name = "app"
repository = ""
version = "0.1.0"
[build-dependencies]
tauri-build = {git = "https://github.com/tauri-apps/tauri/", branch = "next"}

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
tauri = {git = "https://github.com/tauri-apps/tauri/", branch = "next", features = ["api-all", "system-tray"]}
tauri-plugin-window-state = {git = "https://github.com/tauri-apps/tauri-plugin-window-state", commit = "d7ff8dbebe8d17e105d0cb5125b1dbaf07077a58"}

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
